--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -7,7 +7,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="1">
-        <ion-button color="light" (click)="previousPokemon(pokemonId)" *ngIf="pokemonId > 1">
+        <ion-button color="light" (click)="previousPokemon()" *ngIf="pokemonId > 1">
           <ion-icon name="arrow-back-outline"></ion-icon>
         </ion-button>
       </ion-col>
