--- a/src/app/components/pokemon-details/details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/details/pokemon-details.page.html
@@ -2,20 +2,8 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-title class="ion-text-center">
-        #{{pokemonId}} {{'NAMES.' + pokemon.name | translate}}
+        #{{pokemon.id}} {{'NAMES.' + pokemon.name | translate}}
       </ion-title>
-    </ion-row>
-    <ion-row>
-      <ion-col size="1">
-        <ion-button color="light" (click)="previousPokemon()" *ngIf="pokemonId > 1">
-          <ion-icon name="arrow-back-outline"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col offsetXs="8" offsetLg="10">
-        <ion-button color="light" (click)="nextPokemon()" *ngIf="pokemonId < 151">
-          <ion-icon name="arrow-forward-outline"></ion-icon>
-        </ion-button>
-      </ion-col>
     </ion-row>
     <ion-row>
       <ion-col sizeLg="10" pushLg="4">
