--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -15,7 +15,7 @@
     <ion-row>
       <ion-col size="auto">
         <ion-button (click)="filterLegendary()"
-                    [ngStyle]="{'--background': 'gold', 'border': 'none', 'box-shadow': '0px 0px 10px gold'}">{{'LEGENDARY'| translate }}</ion-button>
+                    [ngStyle]="{'--background': 'gold', 'box-shadow': '0px 0px 10px gold'}">{{'LEGENDARY'| translate }}</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
