--- a/src/app/components/pokemon-details/pokemon-container/pokemon-container.component.html
+++ b/src/app/components/pokemon-details/pokemon-container/pokemon-container.component.html
@@ -7,7 +7,7 @@
         </ion-button>
       </ion-col>
       <ion-col size="10">
-        <app-pokemon-details [navigate]="pokemonId"></app-pokemon-details>
+        <app-pokemon-details [navigate]="pokemonId" (evolve)="nextPokemon()"></app-pokemon-details>
       </ion-col>
       <ion-col size="1">
         <ion-button (click)="nextPokemon()" *ngIf="pokemonId < 151" color="light">
