--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,5 +1,5 @@
 <ion-grid>
-<ion-row><ion-title>{{trainerService.user.value.userName}}</ion-title></ion-row>
+<ion-row><ion-title>{{trainerService.$user.value.userName}}</ion-title></ion-row>
 <form (ngSubmit)="validate()" [formGroup]="userForm">
   <ion-label>Change username :</ion-label>
   <ion-input type="text" [formControl]="userNameCtrl"></ion-input>
