--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -8,8 +8,8 @@
         <ion-item>
           <ion-label position="floating">{{'USERNAME' | translate}}</ion-label>
           <ion-input [formControl]="loginCtrl" type="text"></ion-input>
-          <ion-label [ngStyle]="{'color': 'red'}"
-                     *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">{{'USERNAME' | translate}}
+          <ion-label *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')"
+                     [ngStyle]="{'color': 'red'}">{{'USERNAME' | translate}}
             {{'IS_REQUIRED' | translate}}</ion-label>
         </ion-item>
       </ion-col>
@@ -33,9 +33,13 @@
         </ion-item>
       </ion-row>
     </form>
-    <ion-label [ngStyle]="{'color': 'red'}" *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">
-      {{'PASSWORD_NOT_MATCHING' | translate}}
-    </ion-label>
-    <ion-button color="light" [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
+    <ion-row>
+      <ion-label *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')" [ngStyle]="{'color': 'red'}">
+        {{'PASSWORD_NOT_MATCHING' | translate}}
+      </ion-label>
+    </ion-row>
+    <ion-row>
+      <ion-button [disabled]="userForm.invalid" color="light" type="submit">{{'VALIDATE' | translate}}</ion-button>
+    </ion-row>
   </form>
 </ion-grid>
