--- a/src/app/components/pokemon-details/details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/details/pokemon-details.page.html
@@ -21,9 +21,9 @@
         <ion-row>
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
         </ion-row>
-        <ion-row>
+        <ion-row *ngIf="currentUser">
           <ion-button color="light"
-                      (click)="trainerService.$user.value.login ? addPokemonToTeam(pokemon) : redirectToSignin()"> {{'ADD' | translate}}
+                      (click)="userService.addPokemon(pokemon)"> {{'ADD' | translate}}
           </ion-button>
         </ion-row>
         <ion-row>
