--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-row>
     <ion-col size="4">
-    <ion-title class="main-title" (click)="goBackToPokedex()">Pokedex</ion-title>
+      <ion-title (click)="goBackToPokedex()" class="main-title">Pokedex</ion-title>
     </ion-col>
     <ion-col offset-sm="4" size="auto">
       <ion-item>
@@ -31,21 +31,23 @@
       <ion-popover #popover (didDismiss)="isOpen = false" [isOpen]="isOpen">
         <ng-template>
           <ion-item>
-            <ion-row>
-              <ion-col *ngIf="!currentUser">
-                <ion-button (click)="handleNavigation('signin')" *ngIf="currentUrl !== '/signin'"
-                            color="light">{{'SIGNIN' | translate}}
-                </ion-button>
-                <ion-button (click)="handleNavigation('login')" *ngIf="currentUrl !== '/login'"
-                            color="light">{{'LOGIN' | translate}}
-                </ion-button>
-              </ion-col>
-              <ion-col *ngIf="currentUser">
+            <ion-grid>
+              <ion-row *ngIf="!currentUser && currentUrl !== '/signin'" class="nav-link">
+                <ion-icon name="log-in-outline"></ion-icon>
+                <a (click)="handleNavigation('signin')">{{'SIGNIN' | translate}}
+                </a>
+              </ion-row>
+              <ion-row *ngIf="!currentUser && currentUrl !== '/login'" class="nav-link">
+                <ion-icon name="log-in-outline"></ion-icon>
+                <a (click)="handleNavigation('login')">{{'LOGIN' | translate}}
+                </a>
+              </ion-row>
+              <ion-row *ngIf="currentUser" class="nav-link">
                 <ion-button (click)="handleNavigation('account')" class="button"
                             color="light">{{'ACCOUNT' | translate}}</ion-button>
                 <ion-button (click)="logOut()" class="button" color="light">{{'LOGOUT' | translate}}</ion-button>
-              </ion-col>
-            </ion-row>
+              </ion-row>
+            </ion-grid>
           </ion-item>
         </ng-template>
       </ion-popover>
