--- a/src/app/components/pokemon-details/details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/details/pokemon-details.page.html
@@ -6,28 +6,30 @@
       </ion-title>
     </ion-row>
     <ion-row>
-      <ion-col sizeLg="10" pushLg="4">
-          <ion-img id="img" (click)="playAudio()" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
+      <ion-col pushLg="4" sizeLg="10">
+        <ion-img (click)="playAudio()" [alt]="pokemon.name" [src]="pokemon.img" id="img"></ion-img>
         <ion-row>
           <ion-text *ngIf="pokemon.types.length == 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
-            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}.
+            {{'TYPES.' + pokemon.types[0] | translate}}.
           </ion-text>
           <ion-text *ngIf="pokemon.types.length > 1">
             {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + pokemon.types[0] | translate}}
-            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}.
+            /{{'TYPES.' + pokemon.types[1] | translate}}.
           </ion-text>
         </ion-row>
         <ion-row>
-          <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
+          <ion-col sizeLg="8">
+            {{'DESC.' + pokemon.name | translate}}
+          </ion-col>
         </ion-row>
-        <ion-row *ngIf="currentUser">
-          <ion-button color="light"
-                      (click)="userService.addPokemon(pokemon)"> {{'ADD' | translate}}
+        <ion-row *ngIf="(userObservable$ | async).userName">
+          <ion-button (click)="userService.addPokemon(pokemon)"
+                      color="light"> {{'ADD' | translate}}
           </ion-button>
         </ion-row>
         <ion-row>
-          <ion-col sizeLg="2">
+          <ion-col sizeLg="3">
             <ion-text>{{'WEIGHT' | translate}}: {{pokemon.weight}}</ion-text>
           </ion-col>
           <ion-col>
@@ -35,7 +37,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col sizeLg="2">
+          <ion-col sizeLg="4">
             <ion-item>
               <ion-label>{{'LEVEL' | translate}} :</ion-label>
               <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
@@ -43,13 +45,13 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-button (click)="nextPokemon()" color="success"
-                      *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel">{{'EVOLVE' | translate}}
+          <ion-button (click)="nextPokemon()" *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel"
+                      color="success">{{'EVOLVE' | translate}}
           </ion-button>
-          <ion-button color="light" (click)="nextPokemon()"
-                      *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
+          <ion-button (click)="nextPokemon()" *ngIf="pokemon.exchange"
+                      color="light">{{'EXCHANGE' | translate}}</ion-button>
           <div *ngFor="let stone of pokemon.stone">
-            <ion-img (click)="useStone(stone)" id="stone" [src]='stone'></ion-img>
+            <ion-img (click)="useStone(stone)" [src]='stone' id="stone"></ion-img>
           </div>
         </ion-row>
       </ion-col>
