--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,14 +13,21 @@ ion-popover {
 }
 
 .nav-link {
-  margin: 5px;
+  padding: 10px;
+  margin: 2px 0;
 }
+
 .nav-link:hover {
-  background-color: #898989;
+  cursor: pointer;
+  background-color: #D3D3D3;
+}
+
+ion-icon {
+  width: 24px;
+  height: 24px;
 }
 
 a {
   text-decoration: none;
   color: #000000;
-  cursor: pointer;
 }
