--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,9 +1,11 @@
 <ion-grid>
-<ion-row><ion-title>{{userService.usersList$.value.userName}}</ion-title></ion-row>
-<form (ngSubmit)="validate()" [formGroup]="userForm">
-  <ion-label>Change username :</ion-label>
-  <ion-input type="text" [formControl]="userNameCtrl"></ion-input>
-  <ion-button color="light" type="submit">{{'VALIDATE' | translate}}</ion-button>
-</form>
+  <ion-row>
+    <ion-title>{{userService.currentUser$.value.userName}}</ion-title>
+  </ion-row>
+  <form (ngSubmit)="validate()" [formGroup]="userForm">
+    <ion-label>{{'CHANGE_USERNAME' | translate }} :</ion-label>
+    <ion-input [formControl]="userNameCtrl" type="text"></ion-input>
+    <ion-button color="light" type="submit">{{'VALIDATE' | translate}}</ion-button>
+  </form>
 </ion-grid>
 
