Global style improvement

--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -14,8 +14,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="auto">
-        <ion-button (click)="filterLegendary()"
-                    [ngStyle]="{'--background': 'gold', 'box-shadow': '0px 0px 10px gold'}">{{'LEGENDARY'| translate }}</ion-button>
+        <ion-button class="legendary-button" (click)="filterLegendary()">{{'LEGENDARY'| translate }}</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
