--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-row>
-      <ion-col size="3">
+      <ion-col class="ion-hide-sm-down" sizeMd="3">
         <ion-title (click)="goBackToPokedex()" class="main-title">Pokédex</ion-title>
       </ion-col>
-      <ion-col offset="6" size="auto">
+      <ion-col class="ion-hide-sm-up" sizeMd="1">
+        <ion-icon (click)="goBackToPokedex()" name="home-outline"></ion-icon>
+      </ion-col>
+      <ion-col offsetSm="0" offsetMd="6" size="auto">
         <ion-item>
           <ion-icon name="language-outline"></ion-icon>
           <ion-select (ionChange)="selectedLang($event)" interface="popover">
