--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import '../../../theme/variables';
 
+ion-icon {
+  width: 24px;
+  height: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: $black;
+}
+
+ion-popover {
+  --width: 12%;
+}
+
 .main-title {
   cursor: pointer;
   font-size: 24px;
@@ -8,9 +22,11 @@
   padding: 0;
 }
 
-ion-popover {
-  --width: 12%;
+.lang-selector {
+  width: 100px;
+  margin: 0;
 }
+
 
 .nav-link {
   padding: 10px;
@@ -21,12 +37,3 @@ ion-popover {
   }
 }
 
-ion-icon {
-  width: 24px;
-  height: 24px;
-}
-
-a {
-  text-decoration: none;
-  color: $black;
-}
