style: new Pokémon cards style

--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -4,7 +4,13 @@ ion-card {
 }
 
 ion-card-header ion-img {
-width: 64px;
+height: 15em;
+}
+
+ion-card-title {
+  width: 30%;
+  margin: auto;
+  font-size: 1em;
 }
 
 .icon {
